--- a/Parsing/Parsing.csproj
+++ b/Parsing/Parsing.csproj
@@ -58,6 +58,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\.editorconfig">
+      <Link>.editorconfig</Link>
+    </None>
     <None Include="packages.config" />
     <Antlr4 Include="SBasic.g4" />
   </ItemGroup>
