--- a/SBasic/SBasic.csproj
+++ b/SBasic/SBasic.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="BuildASTVisitor.cs" />
     <Compile Remove="Generated.cs" />
     <Compile Remove="MainWindow.xaml.cs" />
   </ItemGroup>
